--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.5'
 
 services:
   elasticsearch:
-    build: .
+    build: ./Elastic
     image: es
     container_name: es
     hostname: es
